# MLP-KAN

./: README.md  experiment.py  experiment_interpolation.py  pyproject.toml
.github/workflows/: publish.yml
